# prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  LAUNCH.md  PRISM_BUILD_SPEC.md  README.md  demo.tape  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: tests.yml
assets/: dashboard-demo.html
docs/: claude-md-guide.md  commands.md  faq.md  how-it-works.md
prism/: __init__.py  __main__.py  advisor.py  agentsview.py  analyzer.py  app.py  cli.py  dashboard.py  datasource.py  parser.py
prism/styles/: prism.tcss
prism/widgets/: __init__.py  advisor_panel.py  health_card.py  live_watcher.py  metrics_bar.py  session_list.py  timeline.py
scripts/: gen_demo_dashboard.py  gen_detail_screenshot.py  gen_producthunt_thumbnail.py
skills/prism-advise/: SKILL.md
skills/prism-analyze/: SKILL.md
skills/prism-dashboard/: SKILL.md
tests/: conftest.py  test_advisor.py  test_agentsview.py  test_analyzer.py  test_cli.py  test_dashboard.py  test_datasource.py  test_live_watcher.py  test_parser.py
tests/fixtures/: sample_session.jsonl  session_with_compaction.jsonl  session_with_retries.jsonl
